--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,4 +1,7 @@
 .u-center-text {text-align:center;}
+
 .u-margin-bottom-small{margin-bottom: 1.5rem;}
 .u-margin-bottom-medium{margin-bottom: 4rem;}
-.u-margin-bottom-big{margin-bottom: 8rem;}
+.u-margin-bottom-big{margin-bottom: 7rem;}
+.u-margin-top-big{margin-top: 7rem;}
+.u-margin-top-huge{margin-top: 9rem;}
