--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -37,6 +37,17 @@
 		}
 	}
 
+	&--green {
+		background-color: $color-primary;
+		color: $color-grey-dark;
+
+		&::after {
+			background-color: $color-primary;
+			color: $color-grey-dark;
+		}
+
+	}
+
 	&--animated {
 		animation: moveInBottom .5s ease-out .5s;
 		animation-fill-mode: backwards; /*Apply 0% animation before animation starts*/
