--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+	&, //<button> element
 	&:link,
 	&:visited {
 		text-transform: uppercase;
@@ -7,9 +8,12 @@
 		display: inline-block;
 		border-radius: 10rem;
 		font-size: $default-font-size;
-
 		transition: all .2s;
 		position: relative;
+
+		//Change for the <button> element
+		border: none;
+		cursor: pointer;
 	}
 
 	&:hover {
@@ -22,7 +26,9 @@
 		}
 	}
 
-	&:active {
+	&:active,
+	&:focus {
+		outline: none;
 		transform: translateY(-.1rem);
 		box-shadow: 0 .5rem 1rem rgba($color-black, .2);
 	}
