--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,9 +6,26 @@
 	box-sizing: inherit; /*Inherit box-sizing to make it easier for individual elements to be modified*/
 }
 html {
+	//This defines what 1rem is *root font-size* ~10px
 	font-size: 62.5%; /*Use percentage in order to reference user's root font-size, which is normally 16px*/
+
+	//!Make sure media-queries work with cascading behavior!
+	@include respond(tab-land) {
+		font-size: 56.25%;  //1rem = 9px  ->   9/16 = 56.25%
+	}
+	@include respond(tab-port) {
+		font-size: 50%;  //1rem = 8px  ->   8/16 = 50% 
+	}
+	@include respond(big-desktop) {
+		font-size: 75%;		//1rem = 12px ->  12/16 = 75%
+	}
 }
 
 body {
 	box-sizing: border-box;
+	padding: 3rem;
+	
+	@include respond(tab-port) {
+		padding: 0;
+	}
 }
