--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
 	font-weight: 400;
 	line-height: 1.7;
 	color: $color-grey-dark;
-    padding: 3rem;
 }
 
 .heading-primary {
@@ -22,6 +21,11 @@ body {
 		animation-name: moveInLeft;
 		animation-duration: 1s;
 		animation-timing-function: ease-out;
+
+		@include respond(phone){
+			letter-spacing: 1rem;
+			font-size: 5rem;
+		}
 	}
 
 	&--sub {
@@ -33,6 +37,9 @@ body {
 		animation-name: moveInRight;
 		animation-duration: 1s;
 		animation-timing-function: ease-out;
+
+		@include respond(phone){
+		}
 	}
 }
 
@@ -47,6 +54,14 @@ body {
 
 	letter-spacing: 1px;
 	transition: all .2s;
+
+	@include respond(tab-port) {
+		font-size: 3rem;
+	}
+
+	@include respond(phone) {
+		font-size: 2.5rem;
+	}
 
 	&:hover{
 		transform: skewY(2deg) skewX(15deg) scale(1.1);
