--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -10,12 +10,16 @@
 
     &__logo-box {
         text-align: center;
+        margin-bottom: 8rem;
+
+        @include respond(tab-port) {
+            margin-bottom: 6rem;
+        }
     }
 
     &__logo {
         width: 15rem;
         height: auto;
-        margin-bottom: 8rem;
     }
 
     &__navigation {
