--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,31 +1,37 @@
 .header {
-	height: 95vh; 
+	position: relative;
+	height: 85vh; 
 	background-image: linear-gradient(
 			to right bottom, 
 			rgba($color-primary-light, 0.8), 
 			rgba($color-primary-dark, 0.8)), 
 		url(../img/hero-small.jpg);
-
 	/*Fixes background width and height to be the same as the container depending on viewport dimensions*/
 	background-size: cover; 
 	/*Aligns background to top and crops from bottom */
 	background-position: top;
 
-	position: relative;
-
+	-webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+	@supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+		height: 95vh;
+	}
 
-	@media (min-resolution: 192dpi) and (min-width: 37.5em), 
-		   (min-width: 125em) { //Resolution of Apple retina display
+	@include respond(phone) {
+		clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+	}
+
+	/*Responsive Image sizes*/
+	@media (min-resolution: 192dpi) and (min-width: 37.5em), //Resolution of Apple retina display
+		   (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), //Safari support
+		   (min-width: 125em) {
 		background-image: linear-gradient(
 				to right bottom, 
 				rgba($color-primary-light, 0.8), 
 				rgba($color-primary-dark, 0.8)), 
 			url(../img/hero.jpg);
-	}
-
-	@include respond(phone) {
-		clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
 	}
 
 	&__logo-box {
